--------------------------------------------------------------------------------
Changelog for Tools.
--------------------------------------------------------------------------------

2011/xx/xx: 1.0.0-beta3
========================================================
- Added switchContext plugin for multi context installs
- Added nlWrapper output modifier
- Added a changeSettings to set default emails content in
French (forgot_login_email,signupemail_message,
webpwdreminder_message,websignupemail_message). Can be
extended to any system setting.


2011/06/27: 1.0.0-beta2
========================================================
- Added an output modifier to bypass the "setLocale" plugin
- Added a basic plugin to set locale

2011/06/19: 1.0.0-beta1
========================================================
- Initial release.